Feat: bug fix and sourcery ai comments resolved
